app inicia em MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,18 +21,17 @@
 
         <activity
             android:name=".controller.RegisterActivity"
+            android:exported="false" >
+        </activity>
+
+        <activity
+            android:name=".controller.MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity
-            android:name=".controller.MainActivity"
-            android:exported="true" >
-
         </activity>
     </application>
 
