--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.5'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.4'
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
     testImplementation 'junit:junit:4.13.2'
 
     // Mascaras de Input
